--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -451,8 +451,9 @@ ul#nav li.current a { color: #1333e9; font-weight: 700;}
 	transition: all 0.3s ease-in-out;
 }
 .portfolio-item .item-wrap a {
-   display: block;
+   display: flex;
    cursor: pointer;
+   flex-direction: column;
 }
 
 /* overlay */
@@ -500,6 +501,9 @@ ul#nav li.current a { color: #1333e9; font-weight: 700;}
 }
 .portfolio-item .item-wrap img {
    vertical-align: bottom;
+    max-height: 100px;
+    object-fit: contain;
+    margin: auto;
 }
 .portfolio-item .portfolio-item-meta { padding: 18px }
 .portfolio-item .portfolio-item-meta h5 {
